--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@ngrx/router-store": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "@ngrx/store-devtools": "^6.1.0",
+    "@ngxs/logger-plugin": "^3.2.0",
+    "@ngxs/router-plugin": "^3.2.0",
+    "@ngxs/store": "^3.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
@@ -35,6 +38,7 @@
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@ngrx/schematics": "^6.1.0",
+    "@ngxs/devtools-plugin": "^3.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
