--- a/angular.json
+++ b/angular.json
@@ -22,11 +22,19 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                  "src/assets/styles/base"
+                ] 
+            },
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/font-awesome/scss/font-awesome.scss",
+              "src/assets/styles/index.scss",
               "src/styles.scss"
             ],
             "scripts": []
