--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngxs/logger-plugin": "^3.2.0",
     "@ngxs/router-plugin": "^3.2.0",
     "@ngxs/store": "^3.2.0",
+    "angular-2-local-storage": "^2.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
