--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             "stylePreprocessorOptions": {
               "includePaths": [
                   "src/assets/styles/base"
-                ] 
+                ]
             },
             "assets": [
               "src/favicon.ico",
@@ -34,6 +34,7 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/font-awesome/scss/font-awesome.scss",
+              "node_modules/ngx-toastr/toastr.css",
               "src/assets/styles/index.scss",
               "src/styles.scss"
             ],
