--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-spinner": "^6.1.2",
     "ngx-toastr": "^9.1.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
