--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store-devtools": "^6.1.0",
     "@ngxs/logger-plugin": "^3.2.0",
     "@ngxs/router-plugin": "^3.2.0",
+    "@ngxs/storage-plugin": "^3.2.0",
     "@ngxs/store": "^3.2.0",
     "angular-2-local-storage": "^2.0.0",
     "bootstrap": "^4.1.3",
