--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ngx-spinner": "^6.1.2",
     "ngx-toastr": "^9.1.0",
     "rxjs": "~6.2.0",
+    "wavesurfer.js": "^2.1.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
