- implemented social sharing feature

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.7",
+    "@fortawesome/free-brands-svg-icons": "^5.4.2",
+    "@fortawesome/free-solid-svg-icons": "^5.4.2",
     "@glidejs/glide": "^3.2.3",
     "@ng-bootstrap/ng-bootstrap": "^3.3.1",
     "@ngrx/effects": "^6.1.0",
@@ -27,6 +31,9 @@
     "@ngrx/router-store": "^6.1.0",
     "@ngrx/store": "^6.1.0",
     "@ngrx/store-devtools": "^6.1.0",
+    "@ngx-share/button": "^6.0.1",
+    "@ngx-share/buttons": "6.0.1",
+    "@ngx-share/core": "^6.0.1",
     "@ngxs/logger-plugin": "^3.2.0",
     "@ngxs/router-plugin": "^3.2.0",
     "@ngxs/storage-plugin": "^3.2.0",
