--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "DSODDesktop": {
+    "dsodt": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,15 +17,15 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/DSODDesktop",
+            "outputPath": "dist/dsodt",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "stylePreprocessorOptions": {
               "includePaths": [
-                  "src/assets/styles/base"
-                ]
+                "src/assets/styles/base"
+              ]
             },
             "assets": [
               "src/favicon.ico",
@@ -42,12 +42,10 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -63,18 +61,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "DSODDesktop:build"
+            "browserTarget": "dsodt:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "DSODDesktop:build:production"
+              "browserTarget": "dsodt:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "DSODDesktop:build"
+            "browserTarget": "dsodt:build"
           }
         },
         "test": {
@@ -108,7 +106,7 @@
         }
       }
     },
-    "DSODDesktop-e2e": {
+    "dsodt-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -116,11 +114,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "DSODDesktop:serve"
+            "devServerTarget": "dsodt:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "DSODDesktop:serve:production"
+              "devServerTarget": "dsodt:serve:production"
             }
           }
         },
@@ -136,7 +134,7 @@
       }
     }
   },
-  "defaultProject": "DSODDesktop",
+  "defaultProject": "dsodt",
   "cli": {
     "defaultCollection": "@ngrx/schematics"
   }
