--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/font-awesome/scss/font-awesome.scss",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "src/assets/styles/index.scss",
               "src/styles.scss"
             ],
