--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-spinner": "^6.1.2",
     "ngx-toastr": "^9.1.0",
+    "ngx-ui-switch": "^1.6.0",
     "rxjs": "~6.2.0",
     "wavesurfer.js": "^2.1.0",
     "zone.js": "~0.8.26"
