--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "@ngxs/router-plugin": "^3.2.0",
     "@ngxs/storage-plugin": "^3.2.0",
     "@ngxs/store": "^3.2.0",
+    "@types/moment": "^2.13.0",
     "angular-2-local-storage": "^2.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "moment": "^2.22.2",
+    "ng-click-outside": "^4.0.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-spinner": "^6.1.2",
     "ngx-toastr": "^9.1.0",
