--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ng2-go-top-button": "^6.0.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-spinner": "^6.1.2",
     "ngx-toastr": "^9.1.0",
