--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
-    "ng2-go-top-button": "^6.0.0",
     "moment": "^2.22.2",
     "ng-click-outside": "^4.0.0",
+    "ng2-go-top-button": "^6.0.0",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-device-detector": "^1.3.4",
     "ngx-image-cropper": "^1.2.2",
     "ngx-spinner": "^6.1.2",
     "ngx-toastr": "^9.1.0",
