--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-device-detector": "^1.3.4",
     "ngx-image-cropper": "^1.2.2",
+    "ngx-infinite-scroll": "^6.0.1",
     "ngx-spinner": "^6.1.2",
     "ngx-toastr": "^9.1.0",
     "ngx-ui-switch": "^1.6.0",
